--- a/ui/assets/main.css
+++ b/ui/assets/main.css
@@ -6,9 +6,7 @@ html, body {
 }
 
 body {
-    background-color: rgb(55, 58, 52);
-    color: #ffffff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html, body, #main {
