--- a/ui/assets/main.css
+++ b/ui/assets/main.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-    font-family: 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Helvetica Neue', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html, body, #main {
