--- a/app/assets/tailwind.config.css
+++ b/app/assets/tailwind.config.css
@@ -14,7 +14,7 @@
   --color-text-base: #e3e4e5;
   --color-bg-primary: #101011;
   --color-bg-secondary: #090909;
-  --color-accent: #415A77;
+  --color-accent: #5e6ad2;
   --color-info: #778DA9;
   --color-bg-light: #E0E1DD;
   --color-item-hover-bg: #1a1a1a;
