--- a/app/assets/tailwind.output.css
+++ b/app/assets/tailwind.output.css
@@ -52,7 +52,7 @@
     --color-text-base: #e3e4e5;
     --color-bg-primary: #101011;
     --color-bg-secondary: #090909;
-    --color-accent: #415A77;
+    --color-accent: #5e6ad2;
     --color-item-hover-bg: #1a1a1a;
     --color-text-secondary: #999999;
   }
@@ -290,8 +290,35 @@
   .h-full {
     height: 100%;
   }
+  .w-18 {
+    width: calc(var(--spacing) * 18);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-24 {
+    width: calc(var(--spacing) * 24);
+  }
+  .w-28 {
+    width: calc(var(--spacing) * 28);
+  }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
+  }
+  .w-36 {
+    width: calc(var(--spacing) * 36);
+  }
   .w-\[22\%\] {
     width: 22%;
+  }
+  .w-\[30px\] {
+    width: 30px;
+  }
+  .w-\[32px\] {
+    width: 32px;
+  }
+  .w-\[36px\] {
+    width: 36px;
   }
   .w-\[40px\] {
     width: 40px;
@@ -302,8 +329,26 @@
   .w-max {
     width: max-content;
   }
+  .max-w-\[30px\] {
+    max-width: 30px;
+  }
+  .max-w-\[32px\] {
+    max-width: 32px;
+  }
+  .max-w-\[36px\] {
+    max-width: 36px;
+  }
   .max-w-\[40px\] {
     max-width: 40px;
+  }
+  .min-w-\[30px\] {
+    min-width: 30px;
+  }
+  .min-w-\[32px\] {
+    min-width: 32px;
+  }
+  .min-w-\[36px\] {
+    min-width: 36px;
   }
   .min-w-\[120px\] {
     min-width: 120px;
@@ -359,6 +404,11 @@
   .self-start {
     align-self: flex-start;
   }
+  .truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .overflow-auto {
     overflow: auto;
   }
@@ -411,8 +461,17 @@
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
+  .border-b-accent\! {
+    border-bottom-color: var(--color-accent) !important;
+  }
+  .border-b-bg-secondary\! {
+    border-bottom-color: var(--color-bg-secondary) !important;
+  }
   .border-b-blue-400\! {
     border-bottom-color: var(--color-blue-400) !important;
+  }
+  .border-b-item-hover-bg\! {
+    border-bottom-color: var(--color-item-hover-bg) !important;
   }
   .border-b-transparent\! {
     border-bottom-color: transparent !important;
@@ -474,14 +533,8 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .pt-1 {
-    padding-top: calc(var(--spacing) * 1);
-  }
   .pr-2 {
     padding-right: calc(var(--spacing) * 2);
-  }
-  .pb-2\.5 {
-    padding-bottom: calc(var(--spacing) * 2.5);
   }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
@@ -515,6 +568,9 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .text-nowrap {
+    text-wrap: nowrap;
   }
   .whitespace-nowrap {
     white-space: nowrap;
@@ -597,6 +653,26 @@
       }
     }
   }
+  .hover\:bg-accent\/20 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, #5e6ad2 20%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-accent) 20%, transparent);
+        }
+      }
+    }
+  }
+  .hover\:bg-accent\/70 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, #5e6ad2 70%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-accent) 70%, transparent);
+        }
+      }
+    }
+  }
   .hover\:bg-green-600 {
     &:hover {
       @media (hover: hover) {
@@ -608,6 +684,16 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-item-hover-bg);
+      }
+    }
+  }
+  .hover\:bg-item-hover-bg\/50 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, #1a1a1a 50%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-item-hover-bg) 50%, transparent);
+        }
       }
     }
   }
