chore: fixed bug in table input where internatlly empty column still triggered new row

--- a/app/assets/tailwind.output.css
+++ b/app/assets/tailwind.output.css
@@ -253,6 +253,9 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .h-0 {
     height: calc(var(--spacing) * 0);
   }
@@ -360,6 +363,9 @@
   }
   .overflow-y-auto {
     overflow-y: auto;
+  }
+  .\!rounded-none {
+    border-radius: 0 !important;
   }
   .rounded {
     border-radius: 0.25rem;
